# lc-course

./: .env  .gitignore  hello.ipynb  pyproject.toml
.ipynb_checkpoints/: hello-checkpoint.ipynb
notebooks/: hello.ipynb
notebooks/第1章-AI通识与基础/: OpenAI.ipynb
notebooks/第2章-Langchain入门/: langchaintools.ipynb  memory.ipynb  models.ipynb  prompt.ipynb  tools.ipynb
