[project]
name = "lc-course"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.19",
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-qwq>=0.3.5",
    "langchain-tavily>=0.2.18",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "notebook>=7.5.6",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "tzlocal>=5.3.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
